--- a/settings/serverlist.ini
+++ b/settings/serverlist.ini
@@ -1,7 +1,7 @@
 [List]
 RegionCount=2
-Region_0=Server1
-Region_1=Vâ L©m TruyÒn Kú
+Region_0=M¸y chñ ®· vµo
+Region_1=Vâ l©m truyÒn kú
 
 [Region_0]
 
